[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "python-telegram-bot==20.8",
    "qrcode>=8.2",
    "reportlab>=4.4.1",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]
